# Game-in-C

./: CMakeLists.txt
SDL2_image-2.8.2/cmake/: sdl2_image-config.cmake
lib/: animation.c  animation.h  entity.c  entity.h  movement.c  movement.h  player.c  player.h  rectangle.c  rectangle.h  sdl_init.c  sdl_init.h
src/: main.c  main.h
unused/: movement.c  movement.h
